--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
-        cache: false
+        cache: true
 
     - name: Build
       run: go build -v ./...
